pipeline-integration/book-info-cicd/tekton/canary-templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: details
        version: v1
    spec:
      containers:
      - name: details
   #     image: docker.io/maistra/examples-bookinfo-details-v1:0.12.0
        image: dso-quay-registry-quay-quay-enterprise.apps.ocpcluster1.ocp.stackpoc.com/preda/details-full:1.16.2 #scratch
   #     image: dso-quay-registry-quay-quay-enterprise.apps.ocp1.azure.dso.digital.mod.uk/dso-project/details-full:1.16.2 #modace
        imagePullPolicy: IfNotPresent
