pipeline-integration/book-info-cicd/tekton/canary-templates/virtualservice-service.yaml
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: reviews
#spec:
#  hosts:
#    - reviews
#  http:
#  - route:
  
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
